Add a function to create/append new divs to color
Coloring isn't yet implemented. Some adjustments to
style, most importantly - flexbox to contain new divs.
Code to set .main dimensions was refactored into
separate function

--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ main {
 }
 
 .grid {
+    display: flex;
+    flex-wrap: wrap;
+    
     border: double 5px black;
     background-color: lightyellow;
 }
