--- a/style.css
+++ b/style.css
@@ -29,9 +29,14 @@ main {
 .grid {
     display: flex;
     flex-wrap: wrap;
-    
+
     border: double 5px black;
     background-color: lightyellow;
+}
+
+.cell {
+    background-color: azure;
+    border: solid 1px lightgray;
 }
 
 footer {
