--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ ul {
     font-size: 18px;
 }
 
-.brightnessPanel {
+.opacityPanel {
     flex: 0 1 180px;
     display: flex;
     justify-content: center;
@@ -78,13 +78,13 @@ ul {
     gap: 10px;
 }
 
-.brightnessControls {
+.opacityControls {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-.brightnessControls button {
+.opacityControls button {
     flex: 1 1 0;
     padding: 5px;
     border-radius: 16px;
